--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 altgraph==0.17.4
+certifi==2024.2.2
+charset-normalizer==3.3.2
+customtkinter==5.2.2
+darkdetect==0.8.0
+idna==3.7
 packaging==24.0
 pefile==2023.2.7
 pyinstaller==6.6.0
 pyinstaller-hooks-contrib==2024.4
 pynput==1.7.6
 pywin32-ctypes==0.2.2
+requests==2.31.0
 setuptools==69.5.1
 six==1.16.0
+urllib3==2.2.1
